--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+jwt.expiration=300000
+jwt.secret=0Gd1eG071DS834t3onDEe87BoaNa248a
