Add category model, service, control, dtos and mapper. Created yaml files for tables categories and book category relation.

--- a/src/main/resources/db/changelog/changes/06-insert-users.yaml
+++ b/src/main/resources/db/changelog/changes/06-insert-users.yaml
@@ -3,14 +3,14 @@ databaseChangeLog:
       id: insert-users
       author: vlad_a
       changes:
-        - insert:
-            tableName: users
-            columns:
-              - column: {name: email, value: "benbigb@gmail.com"}
-              - column: {name: password, value: "$10$lptrGdPUDBpu/yp1iiRrteeZ6vmrFCrJ/E55pVQfO7JDBQKZXo8ba"}
-              - column: {name: first_name, value: "Ben"}
-              - column: {name: last_name, value: "Benings"}
-              - column: {name: shipping_address, value: "Bruno avenue 16/8"}
+#        - insert:
+#            tableName: users
+#            columns:
+#              - column: {name: email, value: "benbigb@gmail.com"}
+#              - column: {name: password, value: "$10$lptrGdPUDBpu/yp1iiRrteeZ6vmrFCrJ/E55pVQfO7JDBQKZXo8ba"} # REWRITE
+#              - column: {name: first_name, value: "Ben"}
+#              - column: {name: last_name, value: "Benings"}
+#              - column: {name: shipping_address, value: "Bruno avenue 16/8"}
         - insert:
             tableName: users
             columns:
@@ -19,14 +19,14 @@ databaseChangeLog:
               - column: {name: first_name, value: "Sam"}
               - column: {name: last_name, value: "White"}
               - column: {name: shipping_address, value: "Spam st. 50/2"}
-        - insert:
-            tableName: users
-            columns:
-              - column: {name: email, value: "ben1@gmail.com"}
-              - column: {name: password, value: "$10$CJ2rNHKFfAMfBrAMW86k..DbdibZ06KuAae.Ai1bYnVdO7RFND4jC"}
-              - column: {name: first_name, value: "Ben"}
-              - column: {name: last_name, value: "Arrow"}
-              - column: {name: shipping_address, value: "Ocean st 12/2"}
+#        - insert:
+#            tableName: users
+#            columns:
+#              - column: {name: email, value: "ben1@gmail.com"}
+#              - column: {name: password, value: "$10$CJ2rNHKFfAMfBrAMW86k..DbdibZ06KuAae.Ai1bYnVdO7RFND4jC"}  # REWRITE
+#              - column: {name: first_name, value: "Ben"}
+#              - column: {name: last_name, value: "Arrow"}
+#              - column: {name: shipping_address, value: "Ocean st 12/2"}
         - insert:
             tableName: users
             columns:
