--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/book_store
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=oiY39Pnq#H71gJ&
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
-jwt.expiration=300000
+jwt.expiration=30000000
 jwt.secret=0Gd1eG071DS834t3onDEe87BoaNa248a
