--- a/src/main/resources/db/changelog/changes/09-create-books_categories-table.yaml
+++ b/src/main/resources/db/changelog/changes/09-create-books_categories-table.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: create-book_category-table
+      id: create-books_categories-table
       author: vlad_a
       changes:
         createTable:
-          tableName: book_category
+          tableName: books_categories
           columns:
             - column:
                 name: book_id
