--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -17,3 +17,9 @@ databaseChangeLog:
       file: db/changelog/changes/08-create-categories-table.yaml
   - include:
       file: db/changelog/changes/09-create-books_categories-table.yaml
+  - include:
+      file: db/changelog/changes/10-create-shopping_carts-table.yaml
+  - include:
+      file: db/changelog/changes/11-create-user_shopping_cart-table.yaml
+  - include:
+      file: db/changelog/changes/12-create-cart_items-table.yaml
