--- a/src/main/resources/db/changelog/changes/07-insert-users_roles.yaml
+++ b/src/main/resources/db/changelog/changes/07-insert-users_roles.yaml
@@ -11,5 +11,10 @@ databaseChangeLog:
         - insert:
             tableName: users_roles
             columns:
+              - column: {name: user_id, valueComputed: "(SELECT id FROM users WHERE email = 'alice@gmail.com')"}
+              - column: {name: role_id, value: 2}
+        - insert:
+            tableName: users_roles
+            columns:
               - column: {name: user_id, valueComputed: "(SELECT id FROM users WHERE email = 'vo_admin@gmail.com')"}
               - column: {name: role_id, value: 1}
