--- a/src/main/resources/db/changelog/changes/10-create-shopping_carts-table.yaml
+++ b/src/main/resources/db/changelog/changes/10-create-shopping_carts-table.yaml
@@ -11,6 +11,7 @@ databaseChangeLog:
                 type: bigint
                 autoIncrement: true
                 constraints:
+                  primaryKeyName: pk_shopping_cart
                   primaryKey: true
                   nullable: false
             - column:
@@ -19,3 +20,13 @@ databaseChangeLog:
                 defaultValueBoolean: false
                 constraints:
                   nullable: false
+  - changeSet:
+      id: add-foreign-key-user_id
+      author: vlad_a
+      changes:
+        addForeignKeyConstraint:
+          baseColumnNames: id
+          baseTableName: shopping_carts
+          constraintName: FK_SHOPPING_CARTS_ON_ID
+          referencedColumnNames: id
+          referencedTableName: users
