--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=admin123
-POSTGRES_DATABASE=book
-POSTGRES_LOCAL_PORT=5434
-POSTGRES_DOCKER_PORT=5432
-
 SPRING_LOCAL_PORT=8081
 SPRING_DOCKER_PORT=8080
-DEBUG_PORT=5005
 JWT_SECRET=0Gd1eG071DS834t3onDEe87BoaNa248a
 JWT_EXPIRATION=30000000
+
+MYSQL_DATABASE=book_store
+MYSQL_USERNAME=admin
+MYSQL_PASSWORD="oiY39Pnq#H71gJ&"
+MYSQL_ROOT_PASSWORD=1234567809
+MYSQL_LOCAL_PORT=3306
+MYSQL_DOCKER_PORT=3306
+DEBUG_PORT=5005
