--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,28 @@
 version: "3.8"
 
 services:
-  postgresdb:
-    platform: linux/arm64
-    image: postgres
-    restart: unless-stopped
+  mysql:
+    image: mysql
+    restart: on-failure:3
     env_file: ./.env
     environment:
-      - POSTGRES_USER=$POSTGRES_USER
-      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
-      - POSTGRES_DB=$POSTGRES_DATABASE
+      MYSQL_USER: $MYSQL_USERNAME
+      MYSQL_PASSWORD: $MYSQL_PASSWORD
+      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+      MYSQL_DATABASE: $MYSQL_DATABASE
     ports:
-      - $POSTGRES_LOCAL_PORT:$POSTGRES_DOCKER_PORT
+      - $MYSQL_LOCAL_PORT:${MYSQL_DOCKER_PORT}
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       interval: 30s
       timeout: 30s
       retries: 3
   app:
     depends_on:
-      - postgresdb
+      mysql:
+        condition: service_healthy
     restart: on-failure
-    image: book-app
+    image: book-store-app
     build: .
     env_file: ./.env
     ports:
@@ -29,11 +30,10 @@ services:
       - $DEBUG_PORT:$DEBUG_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:postgresql://postgresdb:$POSTGRES_DOCKER_PORT/$POSTGRES_DATABASE",
-        "spring.datasource.username" : "$POSTGRES_USER",
-        "spring.datasource.password" : "$POSTGRES_PASSWORD",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.PostgreSQLDialect",
-        "jwt.secret=${JWT_SECRET}",
-        "jwt.expiration=${JWT_EXPIRATION}"
+        "spring.datasource.url" : "jdbc:mysql://mysql:${MYSQL_DOCKER_PORT}/$MYSQL_DATABASE",
+        "spring.datasource.username" : "${MYSQL_USERNAME}",
+        "spring.datasource.password" : "${MYSQL_PASSWORD}",
+        "jwt.expiration" : "${JWT_EXPIRATION}",
+        "jwt.secret" : "${JWT_SECRET}"
       }'
-      JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
+      JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:${DEBUG_PORT}"
