--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/book_store
+spring.datasource.url=jdbc:mysql://localhost:$MYSQL_LOCAL_PORT/book_store
 spring.datasource.username=root
 spring.datasource.password=oiY39Pnq#H71gJ&
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,5 +7,5 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
-jwt.expiration=${JWT_EXPIRATION}
-jwt.secret=${JWT_SECRET}
+jwt.expiration=30000000
+jwt.secret=0Gd1eG071DS834t3onDEe87BoaNa248a
