--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
       MYSQL_DATABASE: $MYSQL_DATABASE
     ports:
-      - $MYSQL_LOCAL_PORT:${MYSQL_DOCKER_PORT}
+      - ${MYSQL_LOCAL_PORT}:${MYSQL_DOCKER_PORT}
     healthcheck:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       interval: 30s
@@ -26,11 +26,11 @@ services:
     build: .
     env_file: ./.env
     ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
-      - $DEBUG_PORT:$DEBUG_PORT
+      - ${SPRING_LOCAL_PORT}:${SPRING_DOCKER_PORT}
+      - ${DEBUG_PORT}:${DEBUG_PORT}
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url" : "jdbc:mysql://mysql:${MYSQL_DOCKER_PORT}/$MYSQL_DATABASE",
+        "spring.datasource.url" : "jdbc:mysql://mysql:${MYSQL_DOCKER_PORT}/${MYSQL_DATABASE}",
         "spring.datasource.username" : "${MYSQL_USERNAME}",
         "spring.datasource.password" : "${MYSQL_PASSWORD}",
         "jwt.expiration" : "${JWT_EXPIRATION}",
